# DevPulse-AI

./: .env.example  .gitignore  DEMO.md  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_enable_pgvector.py  0002_initial_schema.py  8aa4293d1a82_github_review_id_to_bigint.py  c6edf5d1e7ce_bigint_github_review_id.py
app/: config.py  database.py  limiter.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  billing.py  health.py  repositories.py  reviews.py  router.py  webhooks.py
app/models/: __init__.py  code_chunk.py  pull_request.py  repository.py  review.py  user.py
app/schemas/: __init__.py  pull_request.py  repository.py  review.py  user.py
app/services/: embedding_service.py  github_service.py  llm_service.py  rag_service.py  review_service.py  s3_service.py  stripe_service.py
app/utils/: logging.py  security.py
app/workers/: celery_app.py  tasks.py
docs/: architecture.html
infra/: README.md  cloudwatch.tf  ec2.tf  ecr.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  redis_note.md  s3.tf  variables.tf  vpc.tf
scripts/: deploy.sh  setup_ec2.sh
tests/: conftest.py  test_auth.py  test_repositories.py  test_review_service.py  test_webhooks.py
