[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devpulse-ai"
version = "0.1.0"
description = "AI-powered code review SaaS platform using RAG over GitHub pull requests"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "pgvector==0.3.6",

    # AWS
    "boto3==1.35.76",
    "botocore==1.35.76",

    # LangChain (RAG pipeline)
    "langchain==0.3.11",
    "langchain-community==0.3.11",
    "langchain-core==0.3.24",

    # Anthropic LLM
    "anthropic==0.40.0",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.3",
    "passlib[bcrypt]==1.7.4",

    # HTTP client
    "httpx==0.28.1",

    # GitHub integration
    "PyGithub==2.5.0",

    # Stripe billing
    "stripe==11.3.0",

    # Background tasks
    "celery[redis]==5.4.0",
    "redis==5.2.1",

    # Validation & settings
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",

    # Logging
    "structlog==24.4.0",

    # Rate limiting
    "slowapi==0.1.9",

    # Utilities
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "factory-boy==3.3.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "types-redis==4.6.0.20241004",
    "types-stripe==3.5.2.20240106",
    "types-passlib==1.7.7.20240819",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
